Updates from ShareLaTeX

--- a/Bachelorarbeit.tex
+++ b/Bachelorarbeit.tex
@@ -1469,7 +1469,7 @@ $H^1(X,\mathcal{F})$ & 1. Kohomologiegruppe der Riemannschen Fläche $X$ bezügl
 \textbf{Sonstiges}
 \begin{longtable}{p{3.5cm} p{12cm}}
 $A\Subset B$ & $A$ liegt relativ kompakt in $B$\\
-$\mathfrak{V}\ll\mathfrak{V}$ & $\mathfrak{V}$ ist Schrumpfung von $\mathfrak{U}$  7\\
+$\mathfrak{V}\ll\mathfrak{U}$ & $\mathfrak{V}$ ist Schrumpfung von $\mathfrak{U}$  7\\
 \end{longtable}
 \newpage
 \bibliographystyle{alpha}
